Поворот картинки (непрозрачный)

--- a/osn.ui
+++ b/osn.ui
@@ -117,10 +117,10 @@
      <string>Закончить</string>
     </property>
    </widget>
-   <widget class="QSlider" name="povorot_2">
+   <widget class="QSlider" name="razmer_2">
     <property name="geometry">
      <rect>
-      <x>710</x>
+      <x>640</x>
       <y>260</y>
       <width>160</width>
       <height>22</height>
@@ -130,44 +130,10 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QTextBrowser" name="ugol_2">
+   <widget class="QSlider" name="razmer">
     <property name="geometry">
      <rect>
-      <x>650</x>
-      <y>260</y>
-      <width>40</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="html">
-     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:7.8pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Угол&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-   </widget>
-   <widget class="QTextBrowser" name="ugol">
-    <property name="geometry">
-     <rect>
-      <x>650</x>
-      <y>140</y>
-      <width>40</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="html">
-     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:7.8pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Угол&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-   </widget>
-   <widget class="QSlider" name="povorot">
-    <property name="geometry">
-     <rect>
-      <x>710</x>
+      <x>640</x>
       <y>140</y>
       <width>160</width>
       <height>22</height>
@@ -246,6 +212,32 @@ p, li { white-space: pre-wrap; }
       <y>140</y>
       <width>90</width>
       <height>30</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QDial" name="gradus">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>250</y>
+      <width>50</width>
+      <height>64</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>360</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QDial" name="gradus_2">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>130</y>
+      <width>50</width>
+      <height>64</height>
      </rect>
     </property>
    </widget>
