--- a/osn.ui
+++ b/osn.ui
@@ -143,7 +143,7 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spinBox">
+   <widget class="QSpinBox" name="prozrach">
     <property name="geometry">
      <rect>
       <x>540</x>
@@ -151,6 +151,24 @@
       <width>90</width>
       <height>30</height>
      </rect>
+    </property>
+    <property name="suffix">
+     <string/>
+    </property>
+    <property name="minimum">
+     <number>0</number>
+    </property>
+    <property name="maximum">
+     <number>255</number>
+    </property>
+    <property name="singleStep">
+     <number>1</number>
+    </property>
+    <property name="stepType">
+     <enum>QAbstractSpinBox::DefaultStepType</enum>
+    </property>
+    <property name="value">
+     <number>255</number>
     </property>
    </widget>
    <widget class="QPushButton" name="menu">
