--- a/designs/regg.ui
+++ b/designs/regg.ui
@@ -41,8 +41,8 @@
   <widget class="QTextEdit" name="log">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>140</y>
+     <x>228</x>
+     <y>170</y>
      <width>430</width>
      <height>30</height>
     </rect>
@@ -51,8 +51,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>140</y>
+     <x>118</x>
+     <y>170</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -64,8 +64,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>180</y>
+     <x>108</x>
+     <y>210</y>
      <width>91</width>
      <height>31</height>
     </rect>
@@ -77,8 +77,8 @@
   <widget class="QTextEdit" name="prl">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>180</y>
+     <x>228</x>
+     <y>210</y>
      <width>430</width>
      <height>30</height>
     </rect>
@@ -87,8 +87,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>-280</x>
-     <y>200</y>
+     <x>-282</x>
+     <y>230</y>
      <width>481</width>
      <height>61</height>
     </rect>
@@ -100,8 +100,8 @@
   <widget class="QTextEdit" name="prl_2">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>220</y>
+     <x>228</x>
+     <y>250</y>
      <width>430</width>
      <height>30</height>
     </rect>
@@ -111,7 +111,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>280</y>
+     <y>310</y>
      <width>611</width>
      <height>31</height>
     </rect>
@@ -123,14 +123,37 @@
   <widget class="QPushButton" name="buttonNazad">
    <property name="geometry">
     <rect>
-     <x>52</x>
-     <y>140</y>
+     <x>50</x>
+     <y>130</y>
      <width>71</width>
-     <height>61</height>
+     <height>101</height>
     </rect>
    </property>
    <property name="text">
     <string>Назад</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="name">
+   <property name="geometry">
+    <rect>
+     <x>228</x>
+     <y>130</y>
+     <width>430</width>
+     <height>30</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>130</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;Имя&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
  </widget>
