--- a/designs/vkl.ui
+++ b/designs/vkl.ui
@@ -60,6 +60,19 @@
     <string>МЕМ</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>550</x>
+     <y>20</y>
+     <width>91</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>by KiraArensky</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
